src/styles.css
body {
  background-color: #f7e6f5;
  opacity: 0.8;
  background-image: radial-gradient(#ecb5ec 1.05px, transparent 1.05px),
    radial-gradient(#ecb5ec 1.05px, #f7e6f5 1.05px);
  background-size: 42px 42px;
  background-position: 0 0, 21px 21px;
}

header {
  border-bottom: 1px solid #f7e6f5;
  padding: 20px 0;
}

.search-form-input {
  width: 80%;
  border: none;
  background-color: #f7e6f5;
  opacity: 0.8;
  background-image: radial-gradient(#ecb5ec 1.05px, transparent 1.05px),
    radial-gradient(#ecb5ec 1.05px, #f7e6f5 1.05px);
  background-size: 42px 42px;
  background-position: 0 0, 21px 21px;
  padding: 15px 20px;
  border-radius: 6px;
  font-size: 16px;
}

.search-form-button {
  padding: 15px 20px;
  border: none;
  border-radius: 6px;
  color: white;
  background-color: rgb(245, 118, 185);
  width: 16%;
  margin-left: 10px;
}

main {
  padding: 30px 0;
}

.weather-app-data {
  display: flex;
  justify-content: space-between;
}

.weather-app-city {
  margin: 0;
  font-size: 38px;
  line-height: 48px;
}

.weather-app-details {
  font-size: 16px;
  line-height: 20px;
}

.weather-app-details strong {
  color: rgb(139, 31, 89);
}

.weather-app-temperature-container {
  display: flex;
}

.weather-app-temperature {
  font-size: 88px;
  letter-spacing: -10px;
  font-weight: 400px;
  margin-left: 10px;
  margin-right: 10px;
  line-height: 88px;
}

.weather-app-icon {
  width: 88px;
  line-height: 88px;
}

.weather-app-unit {
  margin-top: 16px;
  font-size: 28px;
  line-height: 16px;
}

.weather-app {
  font-family: "Roboto Condensed", serif;
  color: rgba(193, 43, 123);
  background-color: white;
  max-width: 600px;
  padding: 30px;
  margin: 80px auto;
  border-radius: 20px;
  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.2);
}

footer {
  border-top: 1px solid #f7e6f5;
  padding: 20px 20px;
  text-align: center;
  font-size: 13px;
  color: rgba(139, 31, 89, 0.6);
}

a {
  color: rgb(245, 118, 185);
}

